--- a/my_web/contact.html
+++ b/my_web/contact.html
@@ -20,8 +20,9 @@
     <h2>聯絡我們</h2>
     <p>歡迎透過以下方式聯繫我們：</p>
     <ul>
-      <li>Email：roger1624@proton.me</li>
-      <li>Telegram：@bones_sec</li>
+      <li>Email:roger1624@proton.me</li>
+      <li>GitHub:<a href="https://github.com/Rex0Ymd/" target="_blank">https://github.com/Rex0Ymd</a></li>
+      <li>Telegram:<a href="https://t.me/Rex0Ymd" target="_blank">@Rex0Ymd</a></li>
     </ul>
   </main>
   <footer>
