--- a/my_web/index.html
+++ b/my_web/index.html
@@ -27,7 +27,7 @@
     <section class="description">
       <h2>知道大家都愛用USDT</h2>
       <p>但你應該先看看這篇文章</p>
-      <nav><a href="books/TRC20_USDT.pdf">--> USDT存在的可追蹤風險 <--</a></nav>
+      <nav><a href="pages/TRC20_USDT.html">--> USDT存在的可追蹤風險 <--</a></nav>
       <p>或許你該考慮使用隱私貨幣？</p>
       <nav><a href="services.html">--> 到服務頁面免費領取實用小技巧 <--</a></nav>
     </section>
