--- a/my_web/services.html
+++ b/my_web/services.html
@@ -28,8 +28,9 @@
   <main class="description">
     <h2>小技巧</h2>
     <ul>
-      <li><a href="books/Monero_XMR.pdf">隱私加密貨幣.pdf</a></li>
-      <li><a href="books/ProtonMail.pdf">隱私加密電子郵件.pdf</a></li>
+      <nav><a href="pages/Monero_XMR.html">隱私加密貨幣</a></nav>
+      <nav><a href="pages/ProtonMail.html">隱私加密電子郵件</a></nav>
+      <nav><a href="pages/TRC20_USDT.html">USDT存在風險分析</a></nav>
     </ul>
   </main>
   <footer>
