--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta http-equiv="refresh" content="0; url=/my_web/index.html" />
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
-    <p>Redirecting...</p>
+    <p>Loading...</p>
   </body>
 </html>
 
