--- a/my_web/services.html
+++ b/my_web/services.html
@@ -31,6 +31,8 @@
       <nav><a href="pages/Monero_XMR.html">隱私加密貨幣</a></nav>
       <nav><a href="pages/ProtonMail.html">隱私加密電子郵件</a></nav>
       <nav><a href="pages/TRC20_USDT.html">USDT存在風險分析</a></nav>
+      <nav><a href="pages/TOR.html">TOR加密網絡</a></nav>
+      <nav><a href="pages/PGP.html">PGP文字加密系統</a></nav>
     </ul>
   </main>
   <footer>
