--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/my_web/index.html" />
+    <meta http-equiv="refresh" content="0; url=/my_web/" />
     <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
